--- a/04_LocalAndGlobalDP/Untitled.ipynb
+++ b/04_LocalAndGlobalDP/Untitled.ipynb
@@ -417,6 +417,286 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project: Varying Amounts of Noise\n",
+    "\n",
+    "In this project, I want you to augment the randomized response query (the one we just wrote) to allow for varying amounts of randomness to be added. Specifically, I want you to bias the coin flip to be higher or lower and then run the same experiment. \n",
+    "\n",
+    "Note - this one is a bit tricker than you might expect. You need to both adjust the likelihood of the first coin flip AND the de-skewing at the end (where we create the \"augmented_result\" variable)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trueResult = torch.mean(db.float())\n",
+    "    \n",
+    "firstCoinFlip = (torch.rand(len(db)) > noise).float() #Biased coin\n",
+    "secondCoinFlip = (torch.rand(len(db)) > 0.5).float()\n",
+    "\n",
+    "augmentedDatabase = db.float() * firstCoinFlip + ((1-firstCoinFlip) * secondCoinFlip)\n",
+    "\n",
+    "#There will change in DeSkewing\n",
+    "skResult = torch.mean(augmentedDatabase.float()) \n",
+    "\n",
+    "#return dbResult , trueResult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trueMean = 0.7\n",
+    "noiseMean = 0.5 #second coin flip\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Initially what we are doing is . . .\n",
+    "augmentedMean = (trueMean + noiseMean)/2\n",
+    "augmentedMean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise = 0.5 #First coin\n",
+    "#Which actually means 50% of the time we use trueMean and 50% of the time we use noiseMean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "augmentedMean = (trueMean*noise) + (noiseMean*(1 - noise))\n",
+    "augmentedMean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can get trueMean from above equation by simple algebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "privateResult = (skResult/noise) - ((0.5*(1-noise)) / noise) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.5006)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "privateResult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.5003)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skResult"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def query(db, noise=0.2):\n",
+    "    \n",
+    "    trueResult = torch.mean(db.float())\n",
+    "    \n",
+    "    firstCoinFlip = (torch.rand(len(db)) > noise).float() #Biased coin\n",
+    "    secondCoinFlip = (torch.rand(len(db)) > 0.5).float()\n",
+    "    \n",
+    "    augmentedDatabase = db.float() * firstCoinFlip + ((1-firstCoinFlip) * secondCoinFlip)\n",
+    "    \n",
+    "    #There will change in DeSkewing\n",
+    "    skResult = torch.mean(augmentedDatabase.float()) \n",
+    "    \n",
+    "    privateResult = (skResult/noise) - ((0.5*(1-noise))/noise)\n",
+    "    return privateResult , trueResult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With Noise 0.40000009536743164 And Without Noise 0.47999998927116394\n"
+     ]
+    }
+   ],
+   "source": [
+    "db, pdbs = get_createDB_and_parallels(100)\n",
+    "withNoise, withoutNoise = query(db, noise=0.1)\n",
+    "print(\"With Noise {} And Without Noise {}\".format(withNoise,withoutNoise))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With Noise 0.7999999523162842 And Without Noise 0.5699999928474426\n"
+     ]
+    }
+   ],
+   "source": [
+    "db, pdbs = get_createDB_and_parallels(100)\n",
+    "withNoise, withoutNoise = query(db, noise=0.2)\n",
+    "print(\"With Noise {} And Without Noise {}\".format(withNoise,withoutNoise))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With Noise 0.6749999523162842 And Without Noise 0.5799999833106995\n"
+     ]
+    }
+   ],
+   "source": [
+    "db, pdbs = get_createDB_and_parallels(100)\n",
+    "withNoise, withoutNoise = query(db, noise=0.4)\n",
+    "print(\"With Noise {} And Without Noise {}\".format(withNoise,withoutNoise))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With Noise 0.42500001192092896 And Without Noise 0.47999998927116394\n"
+     ]
+    }
+   ],
+   "source": [
+    "db, pdbs = get_createDB_and_parallels(100)\n",
+    "withNoise, withoutNoise = query(db, noise=0.8)\n",
+    "print(\"With Noise {} And Without Noise {}\".format(withNoise,withoutNoise))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With Noise 0.48149991035461426 And Without Noise 0.5004000067710876\n"
+     ]
+    }
+   ],
+   "source": [
+    "db, pdbs = get_createDB_and_parallels(10000)\n",
+    "withNoise, withoutNoise = query(db, noise=0.2)\n",
+    "print(\"With Noise {} And Without Noise {}\".format(withNoise,withoutNoise))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
