--- a/05_DPforDL/DifferentialPrivacy for DeepLearning.ipynb
+++ b/05_DPforDL/DifferentialPrivacy for DeepLearning.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.46966992 0.18348069]] [[4.69669922 1.83480687]] [[4 1]]\n"
+      "[[0.84784545 0.04762735]] [[8.47845447 0.47627352]] [[8 0]]\n"
      ]
     }
    ],
@@ -96,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6, 7, 1, 9, 6, 2, 2, 3, 8, 8])"
+       "array([2, 6, 4, 3, 1, 4, 8, 0, 8, 5])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "(10000, 10)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6, 7, 1, 9, 6, 2, 2, 3, 8, 8])"
+       "array([2, 6, 4, 3, 1, 4, 8, 0, 8, 5])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 1, 0, 0, 2, 1, 2, 1])"
+       "array([1, 1, 1, 1, 2, 1, 1, 0, 2, 0])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,16 +242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -5,  -3,   2,   0, -12,  -6,  31,   0,   3,   6])"
+       "array([ -6, -10,  18,  43,  12, -14,  10,  -7,  -1,  12])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,16 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "3"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -312,13 +312,157 @@
        "10000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(newLabels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from syft.frameworks.torch.differential_privacy import pate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numTeachers, numExamples, numLabels = (100,100,10)\n",
+    "preds = (np.random.rand(numTeachers, numExamples) * numLabels).astype(int)#fake preds\n",
+    "indices = (np.random.rand(numExamples) * numLabels).astype(int)#true answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dep_eps, data_indep_eps = pate.perform_analysis(teacher_preds=preds, indices=indices, noise_eps=0.1,delta=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Independent epsilon :  11.756462732485115\n",
+      "Data Dependent epsilon :  11.756462732485105\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Data Independent epsilon : \",data_indep_eps) #Slightly higher\n",
+    "print(\"Data Dependent epsilon : \",data_dep_eps)\n",
+    "#There's tini tiny tiny tiny agreement b/w the models. well it's not surprising coz as we randomly generated the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lets play around"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 100)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds[:,0:5] *= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Independent epsilon :  11.756462732485115\n",
+      "Data Dependent epsilon :  7.867987172744541\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dep_eps, data_indep_eps = pate.perform_analysis(teacher_preds=preds, indices=indices, noise_eps=0.1,delta=1e-5)\n",
+    "print(\"Data Independent epsilon : \",data_indep_eps)\n",
+    "print(\"Data Dependent epsilon : \",data_dep_eps)\n",
+    "#Ohh this dataset leaks only 7.8 epsilons as opposed to 11.7 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds[:,0:50] *= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: May not have used enough values of l. Increase 'moments' variable and run again.\n",
+      "Data Independent epsilon :  11.756462732485115\n",
+      "Data Dependent epsilon :  1.52655213289881\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dep_eps, data_indep_eps = pate.perform_analysis(teacher_preds=preds, indices=indices, noise_eps=0.1,delta=1e-5)\n",
+    "print(\"Data Independent epsilon : \",data_indep_eps)\n",
+    "print(\"Data Dependent epsilon : \",data_dep_eps)\n",
+    "# -.-  Significantly better privacy leak"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More the predoctions agree with each other, the tighter the value of epsilon we get"
    ]
   },
   {
